Fix header alignment.

--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -1,12 +1,10 @@
 app-header {
   position: fixed;
-  top: 0px;
-  left: 0px;
-  right: 0px;
+  width: 100vw;
   z-index: 1;
 }
 
 router-outlet {
   display: inline-block;
-  margin-top: 5%;
+  margin-top: 10vh;
 }
